--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ h1 {
   margin-right: 10px;
   cursor: pointer;
 }
-
 .task-text {
   flex: 1;
   font-size: 14px;
@@ -82,14 +81,13 @@ h1 {
   word-break: break-word;
 }
 
-.todoItem.completed {
+.completed-text {
   text-decoration: line-through;
   color: gray;
   opacity: 0.7;
 }
 
 .empty {
-  font-family: "Inter";
   font-weight: 400;
   font-size: 14px;
   text-align: center;
@@ -99,9 +97,19 @@ h1 {
 .delete-btn {
   cursor: pointer;
   font-size: 18px;
-  transition: color 0.2s ease;
+  transition: 0.3s background-color;
+  width: 67;
+  height: 30;
+  border-radius: 6px;
+  padding-top: 6px;
+  padding-right: 12px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  gap: 10px;
+  opacity: 1;
+  color: #ef4444;
 }
 
 .delete-btn:hover {
-  color: red;
+  background-color: crimson;
 }
